--- a/libc/inet/Makefile.in
+++ b/libc/inet/Makefile.in
@@ -29,9 +29,9 @@ CSRC +=	encodeh.c decodeh.c encoded.c decoded.c lengthd.c encodeq.c \
 CSRC += encodep.c decodep.c formquery.c
 
 # multi source socketcalls.c
-CSRC +=	accept.c bind.c connect.c getpeername.c getsockname.c getsockopt.c \
-	listen.c recv.c recvfrom.c recvmsg.c send.c sendmsg.c sendto.c \
-	setsockopt.c shutdown.c socket.c socketpair.c 
+#CSRC +=	accept.c bind.c connect.c getpeername.c getsockname.c getsockopt.c \
+#	listen.c recv.c recvfrom.c recvmsg.c send.c sendmsg.c sendto.c \
+#	setsockopt.c shutdown.c socket.c socketpair.c 
 
 INET_DIR := $(top_srcdir)libc/inet
 INET_OUT := $(top_builddir)libc/inet
